--- a/style.css
+++ b/style.css
@@ -27,11 +27,14 @@ body{
     letter-spacing: 1px;}
 
 .block-main {text-align: center;
-    margin: 100px 0;}
+        margin: 100px 0;}
 
 /*[main]のスタイルシート*/
 
-.block-main {}
+.block-main {
+    text-align: center;
+    margin: 100px 0;
+  }
 
 /*[profile]のスタイルシート*/
 
@@ -55,6 +58,63 @@ body{
     margin: 30px auto;
     padding: 0;
     display: flex;
+    justify-content: center;
     -webkit-justify-content: center;}
 
 .icon-list li {margin-right: 22px;}
+
+/* [works]のスタイルシート */
+
+.box-works {margin: 80px 0 0;}
+
+.works-list {
+    list-style: none;
+    width: 100%;
+    max-width: 1076px;
+    margin: 30px auto;
+    padding: 0;
+    text-align: left;
+    overflow: hidden;
+}
+
+.works-list li {
+    float: left;
+    margin-right: 15px;
+    display: block;
+    width: 100%;
+    max-width: 348px;
+}
+
+.works-list li:last-child {
+margin-right: 0;
+}
+
+.works-list li img {
+    width: 100%;
+    border: 1px solid #ccc;
+}
+
+.works-list li h3 {
+    font-size: 24px;
+    margin: 10px 0;
+}
+
+.works-list li span {
+    font-size: 18px;
+}
+
+.works-list li .link {
+    display: flex;
+    margin-top: 15px;
+    -webkit-justify-content: left;
+}
+
+.works-list li .link a {
+    background-color: rgb(226,226,226);
+    padding: 5px 20px;
+    margin-right: 10px;
+    font-size: 15px;
+    text-decoration: none;
+    color: black;
+}
+
